Update error messages display + swagger
